--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
@@ -29,6 +30,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@types/react-dom": "^16.9.2",
     "@types/react-redux": "^7.1.4",
+    "@types/react-router-dom": "^5.1.0",
     "express": "^4.17.1",
     "typescript": "^3.6.4"
   }
