--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@types/node": "^12.11.1",
     "@types/react-dom": "^16.9.2",
     "@types/react-redux": "^7.1.4",
     "@types/react-router-dom": "^5.1.0",
