--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 GO_ENV=development
 VINDEX_PATH=/tmp/vindex
 STORAGE_PATHS=/Volumes/video1
-FFSHELL_PATH="/Users/tett23/repositories/src/github.com/tett23/kinsro/assets/ts2mp4.ts"
+FFSHELL_PATH="/Users/tett23/repositories/src/github.com/tett23/kinsro/assets/ts2mp4_dummy.sh"
 FFPRESET_PATH="/Users/tett23/repositories/src/github.com/tett23/kinsro/assets/ts2mp4.ffpreset"
