--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 GO_ENV=production
 VINDEX_PATH=/media/video1/vindex
 STORAGE_PATHS=/media/video1
+FFSHELL_PATH="/home/pi/encode/ts2mp4.ts"
+FFPRESET_PATH="/home/pi/encode/ts2mp4.ffpreset"
