--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 GO_ENV=production
 VINDEX_PATH=/media/video1/vindex
 STORAGE_PATHS=/media/video1
-FFSHELL_PATH="/home/pi/encode/ts2mp4.ts"
+FFSHELL_PATH="/home/pi/encode/ts2mp4.sh"
 FFPRESET_PATH="/home/pi/encode/ts2mp4.ffpreset"
