--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
     "components": "./front/src/components"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
+    "core-js": "^3.6.4",
     "parcel-bundler": "^1.12.4",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-redux": "^7.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@types/node": "^12.11.1",
-    "@types/react-dom": "^16.9.2",
-    "@types/react-redux": "^7.1.4",
-    "@types/react-router-dom": "^5.1.0",
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@types/node": "^13.7.1",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "express": "^4.17.1",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.5"
   }
 }
